# django-playground

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
audit/: models.py
audit/migrations/: 0001_initial.py
playground/: models.py  settings.py
playground/models/: __init__.py  base_model.py  discardable.py
post/: models.py
post/migrations/: 0001_initial.py  0002_like.py  0003_scrap.py
user/: models.py
user/migrations/: 0001_initial.py
